Rewrite improvements